--- a/css/styles.css
+++ b/css/styles.css
@@ -14,13 +14,100 @@ html {
 
 body {
   min-block-size: 100vh;
-  line-height: 1.5;
+  font-size: 13px;
+  font-family: "Barlow Semi Condensed", serif;
+  background-color: #ecf2f8;
 }
 
 img,
 picture {
   max-width: 100%;
   display: block;
+}
+
+.main-container {
+  display: grid;
+  grid-template-columns: 1;
+  place-items: center;
+  padding-block: 4.5rem;
+  gap: 1.5rem;
+}
+.main-container article {
+  display: grid;
+  padding: 1.75rem;
+  max-inline-size: 20.5rem;
+  border-radius: 0.5rem;
+  gap: 1rem;
+  z-index: 999;
+  box-shadow: -1px 10px 15px 0px rgba(0, 0, 0, 0.12);
+}
+.main-container article .profile-box {
+  display: grid;
+  grid-template-columns: 1.75rem auto;
+  grid-template-rows: auto auto;
+  column-gap: 1rem;
+}
+.main-container article .profile-box img {
+  border-radius: 50%;
+  margin-block: auto;
+  max-inline-size: 1.75rem;
+  grid-row: 1/3;
+}
+.main-container article .profile-box p {
+  line-height: 1;
+  grid-column: 2/3;
+}
+.main-container article .profile-box .name {
+  font-weight: 500;
+}
+.main-container article .profile-box .verified {
+  font-size: 0.688rem;
+  font-weight: 400;
+  opacity: 50%;
+}
+.main-container article .title {
+  font-size: 1.25rem;
+  font-weight: 500;
+}
+.main-container article .description {
+  opacity: 70%;
+  line-height: 1.5;
+}
+.main-container .daniel {
+  position: relative;
+  background-color: #733fc8;
+  color: #ffffff;
+}
+.main-container .daniel .profile-box img {
+  border: 2px solid #a775f1;
+}
+.main-container .daniel .quotation {
+  position: absolute;
+  inset-inline-end: 1.75rem;
+  z-index: -1;
+  inline-size: clamp(4rem, 30%, 6.375rem);
+}
+.main-container .daniel .description {
+  color: #cfcfcf;
+}
+.main-container .jonathan {
+  background-color: #48556a;
+  color: #ffffff;
+}
+.main-container .jeanette,
+.main-container .kira {
+  background-color: #ffffff;
+  color: #48556a;
+}
+.main-container .patrick {
+  color: #ffffff;
+  background-color: #19202d;
+}
+.main-container .patrick .profile-box img {
+  border: 2px solid #733fc8;
+}
+.main-container .patrick .title {
+  color: #ecf2f8;
 }
 
 /*# sourceMappingURL=styles.css.map */
