--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -1,3 +1,11 @@
+$moderate-violet: #733fc8;
+$violet: #a775f1;
+$very-dark-grayish-blue: #48556a;
+$very-dark-blackish-blue: #19202d;
+$white: #ffffff;
+$light-gray: #cfcfcf;
+$light-grayish-blue: #ecf2f8;
+
 *,
 *::before,
 *::after {
@@ -14,11 +22,121 @@ html {
 
 body {
     min-block-size: 100vh;
-    line-height: 1.5;
+    font-size: 13px;
+    font-family: "Barlow Semi Condensed", serif;
+    background-color: $light-grayish-blue;
 }
 
 img,
 picture {
     max-width: 100%;
     display: block;
+}
+
+.main-container {
+    display: grid;
+    grid-template-columns: 1;
+    place-items: center;
+    padding-block: 4.5rem;
+    gap: 1.5rem;
+
+    article {
+        display: grid;
+        padding: 1.75rem;
+        max-inline-size: 20.5rem;
+        border-radius: 0.5rem;
+        gap: 1rem;
+        z-index: 999;
+        box-shadow: -1px 10px 15px 0px rgba(0, 0, 0, 0.12);
+
+        .profile-box {
+            display: grid;
+            grid-template-columns: 1.75rem auto;
+            grid-template-rows: auto auto;
+            column-gap: 1rem;
+
+
+            img {
+                border-radius: 50%;
+                margin-block: auto;
+                max-inline-size: 1.75rem;
+                grid-row: 1/3;
+            }
+
+            p {
+                line-height: 1;
+                grid-column: 2/3;
+            }
+
+            .name {
+                font-weight: 500;
+            }
+
+            .verified {
+                font-size: 0.688rem;
+                font-weight: 400;
+                opacity: 50%;
+            }
+        }
+
+        .title {
+            font-size: 1.25rem;
+            font-weight: 500;
+        }
+
+        .description {
+            opacity: 70%;
+            line-height: 1.5;
+        }
+    }
+
+    .daniel {
+        position: relative;
+        background-color: $moderate-violet;
+        color: $white;
+
+        .profile-box {
+            img {
+                border: 2px solid $violet;
+            }
+        }
+
+        .quotation {
+            position: absolute;
+            inset-inline-end: 1.75rem;
+            z-index: -1;
+            inline-size: clamp(4rem, 30%, 6.375rem);
+        }
+
+        .description {
+            color: $light-gray;
+        }
+    }
+
+    .jonathan {
+        background-color: $very-dark-grayish-blue;
+        color: $white;
+    }
+
+
+    .jeanette,
+    .kira {
+        background-color: $white;
+        color: $very-dark-grayish-blue;
+    }
+
+    .patrick {
+        color: $white;
+        background-color: $very-dark-blackish-blue;
+
+        .profile-box {
+            img {
+                border: 2px solid $moderate-violet;
+            }
+        }
+
+        .title {
+            color: $light-grayish-blue;
+        }
+    }
 }
