--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -21,6 +21,8 @@ html {
 }
 
 body {
+    display: grid;
+    place-items: center;
     min-block-size: 100vh;
     font-size: 13px;
     font-family: "Barlow Semi Condensed", serif;
@@ -36,9 +38,9 @@ picture {
 .main-container {
     display: grid;
     grid-template-columns: 1;
-    place-items: center;
-    padding-block: 4.5rem;
+    align-items: center;
     gap: 1.5rem;
+    margin-block: 4.5rem;
 
     article {
         display: grid;
@@ -137,6 +139,33 @@ picture {
 
         .title {
             color: $light-grayish-blue;
+        }
+    }
+}
+
+@media (min-width:69rem) {
+    .main-container {
+        margin-inline: auto;
+        max-inline-size: 69rem;
+        grid-template-columns: repeat(4, 1fr);
+        grid-template-rows: 2;
+        place-items: unset;
+        margin-block: auto;
+
+        article {
+            max-inline-size: none;
+        }
+
+        .daniel {
+            grid-column: 1/3;
+        }
+
+        .kira {
+            grid-column: 4/5;
+            grid-row: 1/3;
+        }
+        .patrick {
+            grid-column: 2/4;
         }
     }
 }
