--- a/css/styles.css
+++ b/css/styles.css
@@ -29,7 +29,6 @@ picture {
 
 .main-container {
   display: grid;
-  grid-template-columns: 1;
   align-items: center;
   gap: 1.5rem;
   margin-block: 4.5rem;
@@ -46,7 +45,8 @@ picture {
 .main-container article .profile-box {
   display: grid;
   grid-template-columns: 1.75rem auto;
-  grid-template-rows: auto auto;
+  grid-auto-rows: minmax(1fr, auto);
+  max-block-size: 1.75rem;
   column-gap: 1rem;
 }
 .main-container article .profile-box img {
@@ -114,15 +114,18 @@ picture {
 
 @media (min-width: 69rem) {
   .main-container {
-    margin-inline: auto;
     max-inline-size: 69rem;
     grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: 2;
     place-items: unset;
     margin-block: auto;
   }
   .main-container article {
     max-inline-size: none;
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+  }
+  .main-container article:hover {
+    transform: scale(1.02);
+    box-shadow: 0px 12px 20px rgba(0, 0, 0, 0.15);
   }
   .main-container .daniel {
     grid-column: 1/3;
