--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -37,7 +37,6 @@ picture {
 
 .main-container {
     display: grid;
-    grid-template-columns: 1;
     align-items: center;
     gap: 1.5rem;
     margin-block: 4.5rem;
@@ -51,10 +50,13 @@ picture {
         z-index: 999;
         box-shadow: -1px 10px 15px 0px rgba(0, 0, 0, 0.12);
 
+
         .profile-box {
             display: grid;
             grid-template-columns: 1.75rem auto;
-            grid-template-rows: auto auto;
+            grid-auto-rows: minmax(1fr, auto);
+
+            max-block-size: 1.75rem;
             column-gap: 1rem;
 
 
@@ -97,10 +99,8 @@ picture {
         background-color: $moderate-violet;
         color: $white;
 
-        .profile-box {
-            img {
-                border: 2px solid $violet;
-            }
+        .profile-box img {
+            border: 2px solid $violet;
         }
 
         .quotation {
@@ -145,15 +145,19 @@ picture {
 
 @media (min-width:69rem) {
     .main-container {
-        margin-inline: auto;
         max-inline-size: 69rem;
         grid-template-columns: repeat(4, 1fr);
-        grid-template-rows: 2;
         place-items: unset;
         margin-block: auto;
 
         article {
             max-inline-size: none;
+            transition: transform 0.3s ease, box-shadow 0.3s ease;
+
+            &:hover {
+                transform: scale(1.02);
+                box-shadow: 0px 12px 20px rgba(0, 0, 0, 0.15);
+            }
         }
 
         .daniel {
@@ -164,6 +168,7 @@ picture {
             grid-column: 4/5;
             grid-row: 1/3;
         }
+
         .patrick {
             grid-column: 2/4;
         }
