--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -90,7 +90,7 @@ picture {
 
         .description {
             opacity: 70%;
-            line-height: 1.5;
+            line-height: 1.4;
         }
     }
 
@@ -105,7 +105,7 @@ picture {
 
         .quotation {
             position: absolute;
-            inset-inline-end: 1.75rem;
+            inset-inline-end: 2.25rem ;
             z-index: -1;
             inline-size: clamp(4rem, 30%, 6.375rem);
         }
@@ -162,6 +162,10 @@ picture {
 
         .daniel {
             grid-column: 1/3;
+
+            .quotation {
+            inset-inline-end: 5.5rem ;
+            }
         }
 
         .kira {
